Fix padding on mobile

--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -160,15 +160,19 @@ main
 @media screen and (max-width: 600px)
 
 	#generated-dungeon
+		padding: 30px 15px
 		h4
 			font-size: 36px
 		h5
 			font-size: 16px
 
-	#user-settings #difficulty-selection
-		position: static
-		left: 0
-		margin-bottom: 20px
-		p
-			display: inline-block
-			width: 48%
+	#user-settings
+		.row .col
+			padding-left: 0
+		#difficulty-selection
+			position: static
+			left: 0
+			margin-bottom: 20px
+			p
+				display: inline-block
+				width: 48%
